@@ -27,6 +27,7 @@
 
  New features and improvements:
 
+   - ofaPeriodClose: save size and position of "ArchivingAccountsBalance" dialog box (todo #1516).
    - ofoTVAFormProperties: improve properties update.
 
  Bug fixes:
